@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2012, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,138 +27,56 @@ package jdk.nashorn.internal.runtime;
 
 import static jdk.nashorn.internal.codegen.CompilerConstants.RUN_SCRIPT;
 import static jdk.nashorn.internal.codegen.CompilerConstants.STRICT_MODE;
-import static jdk.nashorn.internal.lookup.Lookup.MH;
 import static jdk.nashorn.internal.runtime.ECMAErrors.typeError;
 import static jdk.nashorn.internal.runtime.ScriptRuntime.UNDEFINED;
+import static jdk.nashorn.internal.runtime.linker.Lookup.MH;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
-import java.lang.reflect.Modifier;
-import java.util.concurrent.atomic.AtomicLong;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.security.AccessControlContext;
 import java.security.AccessController;
 import java.security.CodeSigner;
 import java.security.CodeSource;
-import java.security.Permissions;
 import java.security.PrivilegedAction;
-import java.security.ProtectionDomain;
-import java.util.Map;
-
+import java.util.Locale;
+import java.util.TimeZone;
 import jdk.internal.org.objectweb.asm.ClassReader;
 import jdk.internal.org.objectweb.asm.util.CheckClassAdapter;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import jdk.nashorn.internal.codegen.ClassEmitter;
 import jdk.nashorn.internal.codegen.Compiler;
-import jdk.nashorn.internal.codegen.ObjectClassGenerator;
-import jdk.nashorn.internal.ir.FunctionNode;
-import jdk.nashorn.internal.ir.debug.ASTWriter;
-import jdk.nashorn.internal.ir.debug.PrintVisitor;
-import jdk.nashorn.internal.objects.Global;
-import jdk.nashorn.internal.parser.Parser;
+import jdk.nashorn.internal.codegen.Namespace;
+import jdk.nashorn.internal.codegen.objects.ObjectClassGenerator;
+import jdk.nashorn.internal.runtime.linker.NashornCallSiteDescriptor;
+import jdk.nashorn.internal.runtime.options.KeyValueOption;
+import jdk.nashorn.internal.runtime.options.Option;
 import jdk.nashorn.internal.runtime.options.Options;
 
 /**
  * This class manages the global state of execution. Context is immutable.
  */
 public final class Context {
-    // nashorn specific security runtime access permission names
-    /**
-     * Permission needed to pass arbitrary nashorn command line options when creating Context.
-     */
-    public static final String NASHORN_SET_CONFIG      = "nashorn.setConfig";
-
-    /**
-     * Permission needed to create Nashorn Context instance.
-     */
-    public static final String NASHORN_CREATE_CONTEXT  = "nashorn.createContext";
-
-    /**
-     * Permission needed to create Nashorn Global instance.
-     */
-    public static final String NASHORN_CREATE_GLOBAL   = "nashorn.createGlobal";
-
-    /**
-     * Permission to get current Nashorn Context from thread local storage.
-     */
-    public static final String NASHORN_GET_CONTEXT     = "nashorn.getContext";
-
-    /**
-     * Permission to use Java reflection/jsr292 from script code.
-     */
-    public static final String NASHORN_JAVA_REFLECTION = "nashorn.JavaReflection";
-
-    // nashorn load psuedo URL prefixes
-    private static final String LOAD_CLASSPATH = "classpath:";
-    private static final String LOAD_FX = "fx:";
-    private static final String LOAD_NASHORN = "nashorn:";
-
-    /* Force DebuggerSupport to be loaded. */
-    static {
-        DebuggerSupport.FORCELOAD = true;
-    }
-
-    /**
-     * ContextCodeInstaller that has the privilege of installing classes in the Context.
-     * Can only be instantiated from inside the context and is opaque to other classes
-     */
-    public static class ContextCodeInstaller implements CodeInstaller<ScriptEnvironment> {
-        private final Context      context;
-        private final ScriptLoader loader;
-        private final CodeSource   codeSource;
-
-        private ContextCodeInstaller(final Context context, final ScriptLoader loader, final CodeSource codeSource) {
-            this.context    = context;
-            this.loader     = loader;
-            this.codeSource = codeSource;
-        }
-
-        /**
-         * Return the context for this installer
-         * @return ScriptEnvironment
-         */
-        @Override
-        public ScriptEnvironment getOwner() {
-            return context.env;
-        }
-
-        @Override
-        public Class<?> install(final String className, final byte[] bytecode) {
-            return loader.installClass(className, bytecode, codeSource);
-        }
-
-        @Override
-        public void verify(final byte[] code) {
-            context.verify(code);
-        }
-
-        @Override
-        public long getUniqueScriptId() {
-            return context.getUniqueScriptId();
-        }
-
-        @Override
-        public long getUniqueEvalId() {
-            return context.getUniqueEvalId();
-        }
-    }
 
     /** Is Context global debug mode enabled ? */
     public static final boolean DEBUG = Options.getBooleanProperty("nashorn.debug");
 
-    private static final ThreadLocal<ScriptObject> currentGlobal = new ThreadLocal<>();
+    private static final ThreadLocal<ScriptObject> currentGlobal =
+        new ThreadLocal<ScriptObject>() {
+            @Override
+            protected ScriptObject initialValue() {
+                 return null;
+            }
+        };
 
     /**
-     * Get the current global scope
-     * @return the current global scope
+     * Return the current global scope
+     * @return current global scope
      */
     public static ScriptObject getGlobal() {
-        // This class in a package.access protected package.
-        // Trusted code only can call this method.
-        return getGlobalTrusted();
+        return currentGlobal.get();
     }
 
     /**
@@ -166,11 +84,16 @@ public final class Context {
      * @param global the global scope
      */
     public static void setGlobal(final ScriptObject global) {
-        if (global != null && !(global instanceof Global)) {
-            throw new IllegalArgumentException("global is not an instance of Global!");
+        final SecurityManager sm = System.getSecurityManager();
+        if (sm != null) {
+            sm.checkPermission(new RuntimePermission("setNashornGlobal"));
         }
 
-        setGlobalTrusted(global);
+        if (global != null && !(global instanceof GlobalObject)) {
+            throw new IllegalArgumentException("global does not implement GlobalObject!");
+        }
+
+        currentGlobal.set(global);
     }
 
     /**
@@ -178,21 +101,7 @@ public final class Context {
      * @return current global scope's context.
      */
     public static Context getContext() {
-        final SecurityManager sm = System.getSecurityManager();
-        if (sm != null) {
-            sm.checkPermission(new RuntimePermission(NASHORN_GET_CONTEXT));
-        }
-        return getContextTrusted();
-    }
-
-    /**
-     * Get current context's error writer
-     *
-     * @return error writer of the current context
-     */
-    public static PrintWriter getCurrentErr() {
-        final ScriptObject global = getGlobalTrusted();
-        return (global != null)? global.getContext().getErr() : new PrintWriter(System.err);
+        return Context.getGlobal().getContext();
     }
 
     /**
@@ -210,26 +119,23 @@ public final class Context {
      * @param str  text to write
      * @param crlf write a carriage return/new line after text
      */
-    @SuppressWarnings("resource")
     public static void err(final String str, final boolean crlf) {
-        final PrintWriter err = Context.getCurrentErr();
-        if (err != null) {
-            if (crlf) {
-                err.println(str);
+        try (final PrintWriter err = Context.getContext().getErr()) {
+            if (err != null) {
+                if (crlf) {
+                    err.println(str);
+                } else {
+                    err.print(str);
+                }
             } else {
-                err.print(str);
+                if (crlf) {
+                    System.err.println(str);
+                } else {
+                    System.err.println();
+                }
             }
         }
     }
-
-    /** Current environment. */
-    private final ScriptEnvironment env;
-
-    /** is this context in strict mode? Cached from env. as this is used heavily. */
-    final boolean _strict;
-
-    /** class loader to resolve classes from script. */
-    private final ClassLoader  appLoader;
 
     /** Class loader to load classes from -classpath option, if set. */
     private final ClassLoader  classPathLoader;
@@ -237,44 +143,114 @@ public final class Context {
     /** Class loader to load classes compiled from scripts. */
     private final ScriptLoader scriptLoader;
 
+    /** Top level namespace. */
+    private final Namespace namespace;
+
+    /** Current options. */
+    private final Options options;
+
     /** Current error manager. */
     private final ErrorManager errors;
 
-    /** Unique id for script. Used only when --loader-per-compile=false */
-    private final AtomicLong uniqueScriptId;
+    /** Output writer for this context */
+    private final PrintWriter out;
 
-    /** Unique id for 'eval' */
-    private final AtomicLong uniqueEvalId;
+    /** Error writer for this context */
+    private final PrintWriter err;
 
-    private static final ClassLoader myLoader = Context.class.getClassLoader();
+    /** Local for error messages */
+    private final Locale locale;
+
+    /** Empty map used for seed map for JO$ objects */
+    final PropertyMap emptyMap = PropertyMap.newEmptyMap(this);
+
+    // cache fields for "well known" options.
+    // see jdk.nashorn.internal.runtime.Resources
+
+    /** Always allow functions as statements */
+    public final boolean _anon_functions;
+
+    /** Size of the per-global Class cache size */
+    public final int     _class_cache_size;
+
+    /** Only compile script, do not run it or generate other ScriptObjects */
+    public final boolean _compile_only;
+
+    /** Accumulated callsite flags that will be used when boostrapping script callsites */
+    public final int     _callsite_flags;
+
+    /** Genereate line number table in class files */
+    public final boolean _debug_lines;
+
+    /** Package to which generated class files are added */
+    public final String  _dest_dir;
+
+    /** Display stack trace upon error, default is false */
+    public final boolean _dump_on_error;
+
+    /** Invalid lvalue expressions should be reported as early errors */
+    public final boolean _early_lvalue_error;
+
+    /** Empty statements should be preserved in the AST */
+    public final boolean _empty_statements;
+
+    /** Show full Nashorn version */
+    public final boolean _fullversion;
+
+    /** Create a new class loaded for each compilation */
+    public final boolean _loader_per_compile;
+
+    /** Package to which generated class files are added */
+    public final String  _package;
+
+    /** Only parse the source code, do not compile */
+    public final boolean _parse_only;
+
+    /** Print the AST before lowering */
+    public final boolean _print_ast;
+
+    /** Print the AST after lowering */
+    public final boolean _print_lower_ast;
+
+    /** Print resulting bytecode for script */
+    public final boolean _print_code;
+
+    /** Print function will no print newline characters */
+    public final boolean _print_no_newline;
+
+    /** Print AST in more human readable form */
+    public final boolean _print_parse;
+
+    /** Print AST in more human readable form after Lowering */
+    public final boolean _print_lower_parse;
+
+    /** print symbols and their contents for the script */
+    public final boolean _print_symbols;
+
+    /** is this context in scripting mode? */
+    public final boolean _scripting;
+
+    /** is this context in strict mode? */
+    public final boolean _strict;
+
+    /** print version info of Nashorn */
+    public final boolean _version;
+
+    /** should code verification be done of generated bytecode */
+    public final boolean _verify_code;
+
+    /** time zone for this context */
+    public final TimeZone _timezone;
+
     private static final StructureLoader sharedLoader;
-
-    /*package-private*/ @SuppressWarnings("static-method")
-    ClassLoader getSharedLoader() {
-        return sharedLoader;
-    }
-
-    private static AccessControlContext createNoPermAccCtxt() {
-        return new AccessControlContext(new ProtectionDomain[] { new ProtectionDomain(null, new Permissions()) });
-    }
-
-    private static AccessControlContext createPermAccCtxt(final String permName) {
-        final Permissions perms = new Permissions();
-        perms.add(new RuntimePermission(permName));
-        return new AccessControlContext(new ProtectionDomain[] { new ProtectionDomain(null, perms) });
-    }
-
-    private static final AccessControlContext NO_PERMISSIONS_ACC_CTXT = createNoPermAccCtxt();
-    private static final AccessControlContext CREATE_LOADER_ACC_CTXT  = createPermAccCtxt("createClassLoader");
-    private static final AccessControlContext CREATE_GLOBAL_ACC_CTXT  = createPermAccCtxt(NASHORN_CREATE_GLOBAL);
 
     static {
         sharedLoader = AccessController.doPrivileged(new PrivilegedAction<StructureLoader>() {
             @Override
             public StructureLoader run() {
-                return new StructureLoader(myLoader);
+                return new StructureLoader(Context.class.getClassLoader(), null);
             }
-        }, CREATE_LOADER_ACC_CTXT);
+        });
     }
 
     /**
@@ -297,10 +273,9 @@ public final class Context {
      *
      * @param options options from command line or Context creator
      * @param errors  error manger
-     * @param appLoader application class loader
      */
-    public Context(final Options options, final ErrorManager errors, final ClassLoader appLoader) {
-        this(options, errors, new PrintWriter(System.out, true), new PrintWriter(System.err, true), appLoader);
+    public Context(final Options options, final ErrorManager errors) {
+        this(options, errors, new PrintWriter(System.out, true), new PrintWriter(System.err, true));
     }
 
     /**
@@ -310,31 +285,87 @@ public final class Context {
      * @param errors  error manger
      * @param out     output writer for this Context
      * @param err     error writer for this Context
-     * @param appLoader application class loader
      */
-    public Context(final Options options, final ErrorManager errors, final PrintWriter out, final PrintWriter err, final ClassLoader appLoader) {
+    public Context(final Options options, final ErrorManager errors, final PrintWriter out, final PrintWriter err) {
         final SecurityManager sm = System.getSecurityManager();
         if (sm != null) {
-            sm.checkPermission(new RuntimePermission(NASHORN_CREATE_CONTEXT));
+            sm.checkPermission(new RuntimePermission("createNashornContext"));
         }
 
-        this.env       = new ScriptEnvironment(options, out, err);
-        this._strict   = env._strict;
-        this.appLoader = appLoader;
-        if (env._loader_per_compile) {
-            this.scriptLoader = null;
-            this.uniqueScriptId = null;
-        } else {
-            this.scriptLoader = createNewLoader();
-            this.uniqueScriptId = new AtomicLong();
-        }
+        this.scriptLoader = (ScriptLoader)AccessController.doPrivileged(
+             new PrivilegedAction<ClassLoader>() {
+                @Override
+                public ClassLoader run() {
+                    final ClassLoader structureLoader = new StructureLoader(sharedLoader, Context.this);
+                    return new ScriptLoader(structureLoader, Context.this);
+                }
+             });
+
+        this.namespace = new Namespace();
+        this.options   = options;
         this.errors    = errors;
-        this.uniqueEvalId = new AtomicLong();
+        this.locale    = Locale.getDefault();
+        this.out       = out;
+        this.err       = err;
+
+        _anon_functions     = options.getBoolean("anon.functions");
+        _class_cache_size   = options.getInteger("class.cache.size");
+        _compile_only       = options.getBoolean("compile.only");
+        _debug_lines        = options.getBoolean("debug.lines");
+        _dest_dir           = options.getString("d");
+        _dump_on_error      = options.getBoolean("doe");
+        _early_lvalue_error = options.getBoolean("early.lvalue.error");
+        _empty_statements   = options.getBoolean("empty.statements");
+        _fullversion        = options.getBoolean("fullversion");
+        _loader_per_compile = options.getBoolean("loader.per.compile");
+        _package            = options.getString("package");
+        _parse_only         = options.getBoolean("parse.only");
+        _print_ast          = options.getBoolean("print.ast");
+        _print_lower_ast    = options.getBoolean("print.lower.ast");
+        _print_code         = options.getBoolean("print.code");
+        _print_no_newline   = options.getBoolean("print.no.newline");
+        _print_parse        = options.getBoolean("print.parse");
+        _print_lower_parse  = options.getBoolean("print.lower.parse");
+        _print_symbols      = options.getBoolean("print.symbols");
+        _scripting          = options.getBoolean("scripting");
+        _strict             = options.getBoolean("strict");
+        _version            = options.getBoolean("version");
+        _verify_code        = options.getBoolean("verify.code");
+
+        int callSiteFlags = 0;
+        if (options.getBoolean("profile.callsites")) {
+            callSiteFlags |= NashornCallSiteDescriptor.CALLSITE_PROFILE;
+        }
+
+        if (options.get("trace.callsites") instanceof KeyValueOption) {
+            callSiteFlags |= NashornCallSiteDescriptor.CALLSITE_TRACE;
+            final KeyValueOption kv = (KeyValueOption)options.get("trace.callsites");
+            if (kv.hasValue("miss")) {
+                callSiteFlags |= NashornCallSiteDescriptor.CALLSITE_TRACE_MISSES;
+            }
+            if (kv.hasValue("enterexit") || (callSiteFlags & NashornCallSiteDescriptor.CALLSITE_TRACE_MISSES) == 0) {
+                callSiteFlags |= NashornCallSiteDescriptor.CALLSITE_TRACE_ENTEREXIT;
+            }
+            if (kv.hasValue("objects")) {
+                callSiteFlags |= NashornCallSiteDescriptor.CALLSITE_TRACE_VALUES;
+            }
+            if (kv.hasValue("scope")) {
+                callSiteFlags |= NashornCallSiteDescriptor.CALLSITE_TRACE_SCOPE;
+            }
+        }
+        this._callsite_flags = callSiteFlags;
+
+        final Option<?> option = options.get("timezone");
+        if (option != null) {
+            this._timezone = (TimeZone)option.getValue();
+        } else {
+            this._timezone  = TimeZone.getDefault();
+        }
 
         // if user passed -classpath option, make a class loader with that and set it as
         // thread context class loader so that script can access classes from that path.
         final String classPath = options.getString("classpath");
-        if (! env._compile_only && classPath != null && !classPath.isEmpty()) {
+        if (! _compile_only && classPath != null && !classPath.isEmpty()) {
             // make sure that caller can create a class loader.
             if (sm != null) {
                 sm.checkPermission(new RuntimePermission("createClassLoader"));
@@ -345,11 +376,11 @@ public final class Context {
         }
 
         // print version info if asked.
-        if (env._version) {
+        if (_version) {
             getErr().println("nashorn " + Version.version());
         }
 
-        if (env._fullversion) {
+        if (_fullversion) {
             getErr().println("nashorn full version " + Version.fullVersion());
         }
     }
@@ -358,16 +389,8 @@ public final class Context {
      * Get the error manager for this context
      * @return error manger
      */
-    public ErrorManager getErrorManager() {
+    public ErrorManager getErrors() {
         return errors;
-    }
-
-    /**
-     * Get the script environment for this context
-     * @return script environment
-     */
-    public ScriptEnvironment getEnv() {
-        return env;
     }
 
     /**
@@ -375,7 +398,7 @@ public final class Context {
      * @return output print writer
      */
     public PrintWriter getOut() {
-        return env.getOut();
+        return out;
     }
 
     /**
@@ -383,15 +406,39 @@ public final class Context {
      * @return error print writer
      */
     public PrintWriter getErr() {
-        return env.getErr();
+        return err;
     }
 
     /**
-     * Get the PropertyMap of the current global scope
-     * @return the property map of the current global scope
+     * Get the namespace for this context
+     * @return namespace
      */
-    public static PropertyMap getGlobalMap() {
-        return Context.getGlobalTrusted().getMap();
+    public Namespace getNamespace() {
+        return namespace;
+    }
+
+    /**
+     * Get the options given to this context
+     * @return options
+     */
+    public Options getOptions() {
+        return options;
+    }
+
+    /**
+     * Get the locale for this context
+     * @return locale
+     */
+    public Locale getLocale() {
+        return locale;
+    }
+
+    /**
+     * Get the time zone for this context
+     * @return time zone
+     */
+    public TimeZone getTimeZone() {
+        return _timezone;
     }
 
     /**
@@ -399,11 +446,29 @@ public final class Context {
      *
      * @param source the source
      * @param scope  the scope
+     * @param strict are we in strict mode
      *
      * @return top level function for script
      */
-    public ScriptFunction compileScript(final Source source, final ScriptObject scope) {
-        return compileScript(source, scope, this.errors);
+    public ScriptFunction compileScript(final Source source, final ScriptObject scope, final boolean strict) {
+        return compileScript(source, scope, this.errors, strict);
+    }
+
+    /**
+     * Compile a top level script - no Source given, but an URL to
+     * load it from
+     *
+     * @param name    name of script/source
+     * @param url     URL to source
+     * @param scope   the scope
+     * @param strict  are we in strict mode
+     *
+     * @return top level function for the script
+     *
+     * @throws IOException if URL cannot be resolved
+     */
+    public ScriptFunction compileScript(final String name, final URL url, final ScriptObject scope, final boolean strict) throws IOException {
+        return compileScript(name, url, scope, this.errors, strict);
     }
 
     /**
@@ -421,7 +486,7 @@ public final class Context {
         final String  file       = (location == UNDEFINED || location == null) ? "<eval>" : location.toString();
         final Source  source     = new Source(file, string);
         final boolean directEval = location != UNDEFINED; // is this direct 'eval' call or indirectly invoked eval?
-        final ScriptObject global = Context.getGlobalTrusted();
+        final ScriptObject global = Context.getGlobal();
 
         ScriptObject scope = initialScope;
 
@@ -442,7 +507,7 @@ public final class Context {
             // We need to get strict mode flag from compiled class. This is
             // because eval code may start with "use strict" directive.
             try {
-                strictFlag = clazz.getField(STRICT_MODE.symbolName()).getBoolean(null);
+                strictFlag = clazz.getField(STRICT_MODE.tag()).getBoolean(null);
             } catch (final NoSuchFieldException | SecurityException | IllegalArgumentException | IllegalAccessException e) {
                 //ignored
                 strictFlag = false;
@@ -475,137 +540,78 @@ public final class Context {
         return ScriptRuntime.apply(func, evalThis);
     }
 
-    private static Source loadInternal(final String srcStr, final String prefix, final String resourcePath) {
-        if (srcStr.startsWith(prefix)) {
-            final String resource = resourcePath + srcStr.substring(prefix.length());
-            // NOTE: even sandbox scripts should be able to load scripts in nashorn: scheme
-            // These scripts are always available and are loaded from nashorn.jar's resources.
-            return AccessController.doPrivileged(
-                    new PrivilegedAction<Source>() {
-                        @Override
-                        public Source run() {
-                            try {
-                                final URL resURL = Context.class.getResource(resource);
-                                return (resURL != null)? new Source(srcStr, resURL) : null;
-                            } catch (final IOException exp) {
-                                return null;
-                            }
-                        }
-                    });
-        }
-
-        return null;
-    }
-
     /**
      * Implementation of {@code load} Nashorn extension. Load a script file from a source
      * expression
      *
      * @param scope  the scope
-     * @param from   source expression for script
+     * @param source source expression for script
      *
      * @return return value for load call (undefined)
      *
      * @throws IOException if source cannot be found or loaded
      */
-    public Object load(final ScriptObject scope, final Object from) throws IOException {
-        final Object src = (from instanceof ConsString)?  from.toString() : from;
-        Source source = null;
+    public Object load(final ScriptObject scope, final Object source) throws IOException {
+        Object src = source;
+        URL url = null;
+        String srcName = null;
 
-        // load accepts a String (which could be a URL or a file name), a File, a URL
-        // or a ScriptObject that has "name" and "source" (string valued) properties.
+        if (src instanceof ConsString) {
+            src = src.toString();
+        }
         if (src instanceof String) {
-            final String srcStr = (String)src;
-            if (srcStr.startsWith(LOAD_CLASSPATH)) {
-                URL url = getResourceURL(srcStr.substring(LOAD_CLASSPATH.length()));
-                source = (url != null)? new Source(url.toString(), url) : null;
-            } else {
-                final File file = new File(srcStr);
-                if (srcStr.indexOf(':') != -1) {
-                    if ((source = loadInternal(srcStr, LOAD_NASHORN, "resources/")) == null &&
-                        (source = loadInternal(srcStr, LOAD_FX, "resources/fx/")) == null) {
-                        URL url;
-                        try {
-                            //check for malformed url. if malformed, it may still be a valid file
-                            url = new URL(srcStr);
-                        } catch (final MalformedURLException e) {
-                            url = file.toURI().toURL();
+            srcName = (String)src;
+            final File file = new File((String)src);
+            if (file.isFile()) {
+                url = file.toURI().toURL();
+            } else if (srcName.indexOf(':') != -1) {
+                try {
+                    url = new URL((String)src);
+                } catch (final MalformedURLException e) {
+                    // fallback URL - nashorn:foo.js - check under jdk/nashorn/internal/runtime/resources
+                    String str = (String)src;
+                    if (str.startsWith("nashorn:")) {
+                        str = "resources/" + str.substring("nashorn:".length());
+                        url = Context.class.getResource(str);
+                        if (url == null) {
+                            throw e;
                         }
-                        source = new Source(url.toString(), url);
+                    } else {
+                        throw e;
                     }
-                } else if (file.isFile()) {
-                    source = new Source(srcStr, file);
                 }
             }
-        } else if (src instanceof File && ((File)src).isFile()) {
+            src = url;
+        }
+
+        if (src instanceof File && ((File)src).isFile()) {
             final File file = (File)src;
-            source = new Source(file.getName(), file);
+            url = file.toURI().toURL();
+            if (srcName == null) {
+                srcName = file.getCanonicalPath();
+            }
         } else if (src instanceof URL) {
-            final URL url = (URL)src;
-            source = new Source(url.toString(), url);
+            url = (URL)src;
+            if (srcName == null) {
+                srcName = url.toString();
+            }
+        }
+
+        if (url != null) {
+            assert srcName != null : "srcName null here!";
+            return evaluateSource(srcName, url, scope, scope);
         } else if (src instanceof ScriptObject) {
             final ScriptObject sobj = (ScriptObject)src;
             if (sobj.has("script") && sobj.has("name")) {
                 final String script = JSType.toString(sobj.get("script"));
                 final String name   = JSType.toString(sobj.get("name"));
-                source = new Source(name, script);
-            }
-        } else if (src instanceof Map) {
-            final Map<?,?> map = (Map<?,?>)src;
-            if (map.containsKey("script") && map.containsKey("name")) {
-                final String script = JSType.toString(map.get("script"));
-                final String name   = JSType.toString(map.get("name"));
-                source = new Source(name, script);
+                return evaluateSource(new Source(name, script), scope, scope);
             }
         }
 
-        if (source != null) {
-            return evaluateSource(source, scope, scope);
-        }
+        typeError(Context.getGlobal(), "cant.load.script", ScriptRuntime.safeToString(source));
 
-        throw typeError("cant.load.script", ScriptRuntime.safeToString(from));
-    }
-
-    /**
-     * Implementation of {@code loadWithNewGlobal} Nashorn extension. Load a script file from a source
-     * expression, after creating a new global scope.
-     *
-     * @param from source expression for script
-     * @param args (optional) arguments to be passed to the loaded script
-     *
-     * @return return value for load call (undefined)
-     *
-     * @throws IOException if source cannot be found or loaded
-     */
-    public Object loadWithNewGlobal(final Object from, final Object...args) throws IOException {
-        final ScriptObject oldGlobal = getGlobalTrusted();
-        final ScriptObject newGlobal = AccessController.doPrivileged(new PrivilegedAction<ScriptObject>() {
-           @Override
-           public ScriptObject run() {
-               try {
-                   return newGlobal();
-               } catch (final RuntimeException e) {
-                   if (Context.DEBUG) {
-                       e.printStackTrace();
-                   }
-                   throw e;
-               }
-           }
-        }, CREATE_GLOBAL_ACC_CTXT);
-        // initialize newly created Global instance
-        initGlobal(newGlobal);
-        setGlobalTrusted(newGlobal);
-
-        final Object[] wrapped = args == null? ScriptRuntime.EMPTY_ARRAY :  ScriptObjectMirror.wrapArray(args, oldGlobal);
-        newGlobal.put("arguments", ((GlobalObject)newGlobal).wrapAsObject(wrapped), env._strict);
-
-        try {
-            // wrap objects from newGlobal's world as mirrors - but if result
-            // is from oldGlobal's world, unwrap it!
-            return ScriptObjectMirror.unwrap(ScriptObjectMirror.wrap(load(newGlobal, from), newGlobal), oldGlobal);
-        } finally {
-            setGlobalTrusted(oldGlobal);
-        }
+        return UNDEFINED;
     }
 
     /**
@@ -616,133 +622,77 @@ public final class Context {
      * @see AccessorProperty
      * @see ScriptObject
      *
-     * @param fullName  full name of class, e.g. jdk.nashorn.internal.objects.JO2P1 contains 2 fields and 1 parameter.
+     * @param fullName  full name of class, e.g. jdk.nashorn.internal.objects.JO$2P1 contains 2 fields and 1 parameter.
      *
-     * @return the {@code Class<?>} for this structure
+     * @return the Class<?> for this structure
      *
      * @throws ClassNotFoundException if structure class cannot be resolved
      */
     public static Class<?> forStructureClass(final String fullName) throws ClassNotFoundException {
-        if (System.getSecurityManager() != null && !StructureLoader.isStructureClass(fullName)) {
-            throw new ClassNotFoundException(fullName);
-        }
         return Class.forName(fullName, true, sharedLoader);
     }
 
     /**
-     * Checks that the given Class can be accessed from no permissions context.
-     *
-     * @param clazz Class object
-     * @throw SecurityException if not accessible
-     */
-    public static void checkPackageAccess(final Class<?> clazz) {
-        final SecurityManager sm = System.getSecurityManager();
-        if (sm != null) {
-            Class<?> bottomClazz = clazz;
-            while (bottomClazz.isArray()) {
-                bottomClazz = bottomClazz.getComponentType();
-            }
-            checkPackageAccess(sm, bottomClazz.getName());
-        }
-    }
-
-    /**
-     * Checks that the given package can be accessed from no permissions context.
-     *
-     * @param sm current security manager instance
-     * @param fullName fully qualified package name
-     * @throw SecurityException if not accessible
-     */
-    private static void checkPackageAccess(final SecurityManager sm, final String fullName) {
-        sm.getClass(); // null check
-        final int index = fullName.lastIndexOf('.');
-        if (index != -1) {
-            final String pkgName = fullName.substring(0, index);
-            AccessController.doPrivileged(new PrivilegedAction<Void>() {
-                @Override
-                public Void run() {
-                    sm.checkPackageAccess(pkgName);
-                    return null;
-                }
-            }, NO_PERMISSIONS_ACC_CTXT);
-        }
-    }
-
-    /**
-     * Checks that the given Class can be accessed from no permissions context.
-     *
-     * @param clazz Class object
-     * @return true if package is accessible, false otherwise
-     */
-    private static boolean isAccessiblePackage(final Class<?> clazz) {
-        try {
-            checkPackageAccess(clazz);
-            return true;
-        } catch (final SecurityException se) {
-            return false;
-        }
-    }
-
-    /**
-     * Checks that the given Class is public and it can be accessed from no permissions context.
-     *
-     * @param clazz Class object to check
-     * @return true if Class is accessible, false otherwise
-     */
-    public static boolean isAccessibleClass(final Class<?> clazz) {
-        return Modifier.isPublic(clazz.getModifiers()) && Context.isAccessiblePackage(clazz);
-    }
-
-    /**
      * Lookup a Java class. This is used for JSR-223 stuff linking in from
-     * {@code jdk.nashorn.internal.objects.NativeJava} and {@code jdk.nashorn.internal.runtime.NativeJavaPackage}
+     * {@link jdk.nashorn.internal.objects.NativeJava} and {@link jdk.nashorn.internal.runtime.NativeJavaPackage}
      *
      * @param fullName full name of class to load
      *
-     * @return the {@code Class<?>} for the name
+     * @return the Class<?> for the name
      *
      * @throws ClassNotFoundException if class cannot be resolved
      */
     public Class<?> findClass(final String fullName) throws ClassNotFoundException {
-        if (fullName.indexOf('[') != -1 || fullName.indexOf('/') != -1) {
-            // don't allow array class names or internal names.
-            throw new ClassNotFoundException(fullName);
-        }
-
         // check package access as soon as possible!
-        final SecurityManager sm = System.getSecurityManager();
-        if (sm != null) {
-            checkPackageAccess(sm, fullName);
+        final int index = fullName.lastIndexOf('.');
+        if (index != -1) {
+            final SecurityManager sm = System.getSecurityManager();
+            if (sm != null) {
+                sm.checkPackageAccess(fullName.substring(0, index));
+            }
         }
 
-        // try the script -classpath loader, if that is set
+        // try script loader first
+        try {
+            return Class.forName(fullName, true, scriptLoader);
+        } catch (final ClassNotFoundException e) {
+            // ignored, continue search
+        }
+
+        // try script -classpath loader, if set
         if (classPathLoader != null) {
             try {
                 return Class.forName(fullName, true, classPathLoader);
-            } catch (final ClassNotFoundException ignored) {
+            } catch (final ClassNotFoundException e) {
                 // ignore, continue search
             }
         }
 
-        // Try finding using the "app" loader.
-        return Class.forName(fullName, true, appLoader);
+        // This helps in finding using "app" loader - which is typically set as thread context loader
+        try {
+            return Class.forName(fullName, true, Thread.currentThread().getContextClassLoader());
+        } catch (final ClassNotFoundException e) {
+            throw e;
+        }
     }
 
     /**
      * Hook to print stack trace for a {@link Throwable} that occurred during
      * execution
      *
+     * TODO: use Context.err
+     * .
      * @param t throwable for which to dump stack
      */
     public static void printStackTrace(final Throwable t) {
         if (Context.DEBUG) {
-            t.printStackTrace(Context.getCurrentErr());
+            t.printStackTrace();
         }
     }
 
     /**
      * Verify generated bytecode before emission. This is called back from the
-     * {@link ObjectClassGenerator} or the {@link Compiler}. If the "--verify-code" parameter
+     * {@link ClassEmitter} or the {@link Compiler}. If the "--verify-code" parameter
      * hasn't been given, this is a nop
      *
      * Note that verification may load classes -- we don't want to do that unless
@@ -752,83 +702,29 @@ public final class Context {
      * @param bytecode bytecode to verify
      */
     public void verify(final byte[] bytecode) {
-        if (env._verify_code) {
+        if (_verify_code) {
             // No verification when security manager is around as verifier
             // may load further classes - which should be avoided.
             if (System.getSecurityManager() == null) {
-                CheckClassAdapter.verify(new ClassReader(bytecode), sharedLoader, false, new PrintWriter(System.err, true));
+                CheckClassAdapter.verify(new ClassReader(bytecode), scriptLoader, false, new PrintWriter(System.err, true));
             }
         }
     }
 
     /**
-     * Create and initialize a new global scope object.
-     *
-     * @return the initialized global scope object.
-     */
-    public ScriptObject createGlobal() {
-        return initGlobal(newGlobal());
-    }
-
-    /**
-     * Create a new uninitialized global scope object
+     * Create global script object
      * @return the global script object
      */
-    public ScriptObject newGlobal() {
-        return new Global(this);
-    }
-
-    /**
-     * Initialize given global scope object.
-     *
-     * @param global the global
-     * @return the initialized global scope object.
-     */
-    public ScriptObject initGlobal(final ScriptObject global) {
-        if (! (global instanceof GlobalObject)) {
-            throw new IllegalArgumentException("not a global object!");
-        }
+    public ScriptObject createGlobal() {
+        final ScriptObject global = newGlobal();
 
         // Need only minimal global object, if we are just compiling.
-        if (!env._compile_only) {
-            final ScriptObject oldGlobal = Context.getGlobalTrusted();
-            try {
-                Context.setGlobalTrusted(global);
-                // initialize global scope with builtin global objects
-                ((GlobalObject)global).initBuiltinObjects();
-            } finally {
-                Context.setGlobalTrusted(oldGlobal);
-            }
+        if (!_compile_only) {
+            // initialize global scope with builtin global objects
+            ((GlobalObject)global).initBuiltinObjects();
         }
 
         return global;
-    }
-
-    /**
-     * Trusted variants - package-private
-     */
-
-    /**
-     * Return the current global scope
-     * @return current global scope
-     */
-    static ScriptObject getGlobalTrusted() {
-        return currentGlobal.get();
-    }
-
-    /**
-     * Set the current global scope
-     */
-    static void setGlobalTrusted(ScriptObject global) {
-         currentGlobal.set(global);
-    }
-
-    /**
-     * Return the current global's context
-     * @return current global's context
-     */
-    static Context getContextTrusted() {
-        return Context.getGlobalTrusted().getContext();
     }
 
     /**
@@ -841,32 +737,33 @@ public final class Context {
     static Context fromClass(final Class<?> clazz) {
         final ClassLoader loader = clazz.getClassLoader();
 
-        if (loader instanceof ScriptLoader) {
-            return ((ScriptLoader)loader).getContext();
+        Context context = null;
+        if (loader instanceof NashornLoader) {
+            context = ((NashornLoader)loader).getContext();
         }
 
-        return Context.getContextTrusted();
+        return (context != null) ? context : Context.getContext();
     }
 
-    private URL getResourceURL(final String resName) {
-        // try the classPathLoader if we have and then
-        // try the appLoader if non-null.
-        if (classPathLoader != null) {
-            return classPathLoader.getResource(resName);
-        } else if (appLoader != null) {
-            return appLoader.getResource(resName);
+    private Object evaluateSource(final String name, final URL url, final ScriptObject scope, final ScriptObject thiz) throws IOException {
+        ScriptFunction script = null;
+
+        try {
+            script = compileScript(name, url, scope, new Context.ThrowErrorManager(), _strict);
+        } catch (final ParserException e) {
+            e.throwAsEcmaException(Context.getGlobal());
         }
 
-        return null;
+        return ScriptRuntime.apply(script, thiz);
     }
 
     private Object evaluateSource(final Source source, final ScriptObject scope, final ScriptObject thiz) {
         ScriptFunction script = null;
 
         try {
-            script = compileScript(source, scope, new Context.ThrowErrorManager());
+            script = compileScript(source, scope, new Context.ThrowErrorManager(), _strict);
         } catch (final ParserException e) {
-            e.throwAsEcmaException();
+            e.throwAsEcmaException(Context.getGlobal());
         }
 
         return ScriptRuntime.apply(script, thiz);
@@ -882,70 +779,66 @@ public final class Context {
                 MH.findStatic(
                     MethodHandles.lookup(),
                     script,
-                    RUN_SCRIPT.symbolName(),
+                    RUN_SCRIPT.tag(),
                     MH.type(
                         Object.class,
-                        ScriptFunction.class,
-                        Object.class));
+                        Object.class,
+                        ScriptFunction.class));
 
         boolean strict;
 
         try {
-            strict = script.getField(STRICT_MODE.symbolName()).getBoolean(null);
+            strict = script.getField(STRICT_MODE.tag()).getBoolean(null);
         } catch (final NoSuchFieldException | SecurityException | IllegalArgumentException | IllegalAccessException e) {
             strict = false;
         }
 
         // Package as a JavaScript function and pass function back to shell.
-        return ((GlobalObject)Context.getGlobalTrusted()).newScriptFunction(RUN_SCRIPT.symbolName(), runMethodHandle, scope, strict);
+        return ((GlobalObject)Context.getGlobal()).newScriptFunction(RUN_SCRIPT.tag(), runMethodHandle, scope, strict);
     }
 
-    private ScriptFunction compileScript(final Source source, final ScriptObject scope, final ErrorManager errMan) {
-        return getRunScriptFunction(compile(source, errMan, this._strict), scope);
+    private ScriptFunction compileScript(final String name, final URL url, final ScriptObject scope, final ErrorManager errMan, final boolean strict) throws IOException {
+        return getRunScriptFunction(compile(new Source(name, url), url, errMan, strict), scope);
     }
 
-    private synchronized Class<?> compile(final Source source, final ErrorManager errMan, final boolean strict) {
+    private ScriptFunction compileScript(final Source source, final ScriptObject scope, final ErrorManager errMan, final boolean strict) {
+        return getRunScriptFunction(compile(source, null, errMan, strict), scope);
+    }
+
+    private Class<?> compile(final Source source, final ErrorManager errMan, final boolean strict) {
+        return compile(source, null, errMan, strict);
+    }
+
+   private synchronized Class<?> compile(final Source source, final URL url, final ErrorManager errMan, final boolean strict) {
         // start with no errors, no warnings.
         errMan.reset();
 
         GlobalObject global = null;
         Class<?> script;
 
-        if (env._class_cache_size > 0) {
-            global = (GlobalObject)Context.getGlobalTrusted();
+        if (_class_cache_size > 0) {
+            global = (GlobalObject)Context.getGlobal();
             script = global.findCachedClass(source);
             if (script != null) {
-                Compiler.LOG.fine("Code cache hit for ", source, " avoiding recompile.");
                 return script;
             }
         }
 
-        final FunctionNode functionNode = new Parser(env, source, errMan, strict).parse();
-        if (errors.hasErrors()) {
+        final Compiler compiler = Compiler.compiler(source, this, errMan, strict);
+
+        if (!compiler.compile()) {
             return null;
         }
 
-        if (env._print_ast) {
-            getErr().println(new ASTWriter(functionNode));
-        }
-
-        if (env._print_parse) {
-            getErr().println(new PrintVisitor(functionNode));
-        }
-
-        if (env._parse_only) {
-            return null;
-        }
-
-        final URL          url    = source.getURL();
-        final ScriptLoader loader = env._loader_per_compile ? createNewLoader() : scriptLoader;
+        final ScriptLoader loader = _loader_per_compile ? createNewLoader() : scriptLoader;
         final CodeSource   cs     = url == null ? null : new CodeSource(url, (CodeSigner[])null);
-        final CodeInstaller<ScriptEnvironment> installer = new ContextCodeInstaller(this, loader, cs);
 
-        final Compiler compiler = new Compiler(installer, strict);
-
-        final FunctionNode newFunctionNode = compiler.compile(functionNode);
-        script = compiler.install(newFunctionNode);
+        script = compiler.install(new CodeInstaller() {
+            @Override
+            public Class<?> install(final String className, final byte[] bytecode) {
+                return loader.installClass(className, bytecode, cs);
+            }
+        });
 
         if (global != null) {
             global.cacheClass(source, script);
@@ -959,16 +852,21 @@ public final class Context {
              new PrivilegedAction<ScriptLoader>() {
                 @Override
                 public ScriptLoader run() {
-                    return new ScriptLoader(appLoader, Context.this);
+                    // Generated code won't refer to any class generated by context
+                    // script loader and so parent loader can be the structure
+                    // loader -- which is parent of the context script loader.
+                    return new ScriptLoader(scriptLoader.getParent(), Context.this);
                 }
-             }, CREATE_LOADER_ACC_CTXT);
+             });
     }
 
-    private long getUniqueEvalId() {
-        return uniqueEvalId.getAndIncrement();
-    }
-
-    private long getUniqueScriptId() {
-        return uniqueScriptId.getAndIncrement();
+    private ScriptObject newGlobal() {
+        try {
+            final Class<?> clazz = Class.forName("jdk.nashorn.internal.objects.Global", true, scriptLoader);
+            return (ScriptObject) clazz.newInstance();
+        } catch (final ClassNotFoundException | SecurityException | InstantiationException | IllegalAccessException | IllegalArgumentException e) {
+            printStackTrace(e);
+            throw new RuntimeException(e);
+        }
     }
 }
